--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -10,7 +10,7 @@ monitor=,preferred,auto,auto
 # See https://wiki.hyprland.org/Configuring/Keywords/ for more
 
 # Execute your favorite apps at launch
-exec-once = waybar & hyprpaper & kitty & dunst
+exec-once = waybar & hyprpaper & dunst
 
 # Source a file (multi-file configs)
 # source = ~/.config/hypr/myColors.conf
