--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -10,7 +10,8 @@ monitor=,preferred,auto,auto
 # See https://wiki.hyprland.org/Configuring/Keywords/ for more
 
 # Execute your favorite apps at launch
-exec-once = waybar & hyprpaper & dunst
+exec-once = env LC_TIME="cs_CZ.UTF-8" waybar
+exec-once = hyprpaper & dunst
 
 # Source a file (multi-file configs)
 # source = ~/.config/hypr/myColors.conf
