change hard-coded keybinds

--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -129,16 +129,16 @@ bind = $mainMod, S, togglesplit, # dwindle
 bind = $mainMod, F, fullscreen
 
 # Move window around
-bind = SUPER SHIFT, H, movewindow, l
-bind = SUPER SHIFT, L, movewindow, r
-bind = SUPER SHIFT, K, movewindow, u
-bind = SUPER SHIFT, J, movewindow, d 
+bind = $mainMod SHIFT, H, movewindow, l
+bind = $mainMod SHIFT, L, movewindow, r
+bind = $mainMod SHIFT, K, movewindow, u
+bind = $mainMod SHIFT, J, movewindow, d 
 
 # Resize window
-bind = CTRL, L, resizeactive, 10 0
-bind = CTRL, H, resizeactive, -10 0
-bind = CTRL, K, resizeactive, 0 -10
-bind= CTRL, J, resizeactive, 0 10
+bind = $mainMod CTRL, L, resizeactive, 10 0
+bind = $mainMod CTRL, H, resizeactive, -10 0
+bind = $mainMod CTRL, K, resizeactive, 0 -10
+bind = $mainMod CTRL, J, resizeactive, 0 10
 
 # Move focus with mainMod + arrow keys
 bind = $mainMod, H, movefocus, l
