--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -4,8 +4,12 @@
 #
 
 # See https://wiki.hyprland.org/Configuring/Monitors/
-monitor=,preferred,auto,auto
-
+# monitor=,preferred,auto,1
+monitor=HDMI-A-1,highres,auto,1
+# trigger when the switch is turning off
+bindl = , switch:off:Lid Switch,exec,hyprctl keyword monitor "eDP-1,highres,auto,1"
+# trigger when the switch is turning on
+bindl = , switch:on:Lid Switch,exec,hyprctl keyword monitor "eDP-1,disable"
 
 # See https://wiki.hyprland.org/Configuring/Keywords/ for more
 
@@ -68,7 +72,7 @@ decoration {
 }
 
 animations {
-    enabled = yes
+    enabled = no
 
     # Some default animations, see https://wiki.hyprland.org/Configuring/Animations/ for more
 
