--- a/.tmux/.tmux.conf
+++ b/.tmux/.tmux.conf
@@ -1,6 +1,6 @@
 bind-key -n M-f run-shell "tmux neww ~/.scripts/tmux-sessionizer"
 
-bind -n M-j previous-window
-bind -n M-k next-window
-bind -n M-h switch-client -p
-bind -n M-l switch-client -n
+bind -r j previous-window
+bind -r k next-window
+bind -r h switch-client -p
+bind -r l switch-client -n
