fix tmux detaching when destroying current session

--- a/.tmux/.tmux.conf
+++ b/.tmux/.tmux.conf
@@ -4,3 +4,5 @@ bind -r j previous-window
 bind -r k next-window
 bind -r h switch-client -p
 bind -r l switch-client -n
+
+set-option -g detach-on-destroy off
