--- a/.config/waybar/config.jsonc
+++ b/.config/waybar/config.jsonc
@@ -8,9 +8,11 @@
     "height": 0,
     "modules-left": [
         "clock",
-        "hyprland/workspaces",
+        "hyprland/workspaces"
     ],
-    "modules-center": ["hyprland/window"],
+    "modules-center": [
+        "hyprland/window"
+    ],
     "modules-right": [
         "tray",
         "custom/updates",
@@ -20,7 +22,6 @@
         "pulseaudio",
         "pulseaudio#microphone"
     ],
-
     "hyprland/window": {
         "format": "{}"
     },
@@ -28,7 +29,13 @@
         "disable-scroll": true,
         "all-outputs": true,
         "on-click": "activate",
-        //"format": "{icon}",
+        "format": "{name}: {icon}",
+        "format-icons": {
+            "1": "",
+            "2": "",
+            "4": "",
+            "default": ""
+        },
         "persistent_workspaces": {
             "1": [],
             "2": [],
@@ -44,9 +51,9 @@
     },
     "custom/updates": {
         "format": " {}",
-        "interval": 7200,                     // every two hours
-        "exec": "i=$(checkupdates); echo \"$i\" |wc -l; echo \"$i\" |column -t |tr '\n' '\r'",       // # of updates and tooltip details
-        "exec-if": "exit 0",                  // always run; consider advanced run conditions
+        "interval": 7200, // every two hours
+        "exec": "i=$(checkupdates); echo \"$i\" |wc -l; echo \"$i\" |column -t |tr '\n' '\r'", // # of updates and tooltip details
+        "exec-if": "exit 0", // always run; consider advanced run conditions
         "on-click": "kitty -e sudo pacman -Syu", // update system
         "signal": 8
     },
@@ -58,15 +65,15 @@
         "format": "{: %R   %d/%m}",
         "tooltip-format": "{calendar}",
         "calendar": {
-            "weeks-pos"     : "left",
-            "on-scroll"     : 1,
+            "weeks-pos": "left",
+            "on-scroll": 1,
             "on-click-right": "mode",
             "format": {
-                "months":     "<span color='#ffead3'><b>{}</b></span>",
-                "days":       "<span color='#ecc6d9'><b>{}</b></span>",
-                "weeks":      "<span color='#99ffdd'><b>T{}</b></span> ",
-                "weekdays":   "<span color='#ffcc66'><b>{}</b></span>",
-                "today":      "<span color='#ff6699'><b><u>{}</u></b></span>"
+                "months": "<span color='#ffead3'><b>{}</b></span>",
+                "days": "<span color='#ecc6d9'><b>{}</b></span>",
+                "weeks": "<span color='#99ffdd'><b>T{}</b></span> ",
+                "weekdays": "<span color='#ffcc66'><b>{}</b></span>",
+                "today": "<span color='#ff6699'><b><u>{}</u></b></span>"
             }
         }
     },
@@ -85,7 +92,7 @@
         },
         "format": "🔋 {capacity}%",
         "format-charging": " {capacity}%",
-        "format-plugged": " {capacity}%",
+        "format-plugged": " {capacity}%"
     },
     "pulseaudio": {
         "format": "{icon} {volume}%",
@@ -102,7 +109,11 @@
             "phone": "",
             "portable": "",
             "car": "",
-            "default": ["", "", ""]
+            "default": [
+                "",
+                "",
+                ""
+            ]
         }
     },
     "pulseaudio#microphone": {
