change config to not be deprecated, add info on changing locale

--- a/.config/waybar/config.jsonc
+++ b/.config/waybar/config.jsonc
@@ -36,7 +36,7 @@
             "4": "",
             "default": ""
         },
-        "persistent_workspaces": {
+        "persistent-workspaces": {
             "1": [],
             "2": [],
             "3": [],
