--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -25,6 +25,9 @@ env = XCURSOR_SIZE,24
 env = DDG_ARGS,["-n", 10]
 env = ROFI_SEARCH,ddgr
 
+env = QT_QPA_PLATFORM,wayland
+env = QT_QPA_PLATFORMTHEME,qt6ct
+
 # For all categories, see https://wiki.hyprland.org/Configuring/Variables/
 input {
     kb_layout = cz,us
