--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -11,6 +11,12 @@ bindl = , switch:off:Lid Switch,exec,hyprctl keyword monitor "eDP-1,highres,auto
 # trigger when the switch is turning on
 bindl = , switch:on:Lid Switch,exec,hyprctl keyword monitor "eDP-1,disable"
 
+# audio binds
+binde =, XF86AudioRaiseVolume, exec, wpctl set-volume -l 1 @DEFAULT_AUDIO_SINK@ 2%+
+binde =, XF86AudioLowerVolume, exec, wpctl set-volume -l 1 @DEFAULT_AUDIO_SINK@ 2%-
+binde =, XF86AudioPlay, exec, playerctl play-pause
+bind =, XF86AudioMute, exec, wpctl set-mute @DEFAULT_AUDIO_SINK@ toggle 
+
 # See https://wiki.hyprland.org/Configuring/Keywords/ for more
 
 # Execute your favorite apps at launch
@@ -35,6 +41,7 @@ input {
     kb_model =
     kb_options = grp:alt_shift_toggle 
     kb_rules =
+    numlock_by_default = true
 
     follow_mouse = 1
 
