--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -15,6 +15,8 @@ bindl = , switch:on:Lid Switch,exec,hyprctl keyword monitor "eDP-1,disable"
 binde =, XF86AudioRaiseVolume, exec, wpctl set-volume -l 1 @DEFAULT_AUDIO_SINK@ 2%+
 binde =, XF86AudioLowerVolume, exec, wpctl set-volume -l 1 @DEFAULT_AUDIO_SINK@ 2%-
 binde =, XF86AudioPlay, exec, playerctl play-pause
+binde =, XF86AudioPrev, exec, playerctl previous
+binde =, XF86AudioNext, exec, playerctl next
 bind =, XF86AudioMute, exec, wpctl set-mute @DEFAULT_AUDIO_SINK@ toggle 
 
 # See https://wiki.hyprland.org/Configuring/Keywords/ for more
