--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -23,7 +23,8 @@ bind =, XF86AudioMute, exec, wpctl set-mute @DEFAULT_AUDIO_SINK@ toggle
 
 # Execute your favorite apps at launch
 exec-once = env LC_TIME="cs_CZ.UTF-8" waybar
-exec-once = hyprpaper & dunst
+exec-once = dunst
+exec-once = swww init
 
 # Source a file (multi-file configs)
 # source = ~/.config/hypr/myColors.conf
