--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -25,6 +25,7 @@ bind =, XF86AudioMute, exec, wpctl set-mute @DEFAULT_AUDIO_SINK@ toggle
 exec-once = env LC_TIME="cs_CZ.UTF-8" waybar
 exec-once = dunst
 exec-once = swww init
+exec-once = wpaperd
 
 # Source a file (multi-file configs)
 # source = ~/.config/hypr/myColors.conf
