--- a/.config/tmux/tmux.conf
+++ b/.config/tmux/tmux.conf
@@ -6,3 +6,5 @@ bind -r h switch-client -p
 bind -r l switch-client -n
 
 set-option -g detach-on-destroy off
+set-option -sa terminal-overrides ",xterm*:Tc"
+set-option -g repeat-time 0
