Improve tmux bar

--- a/.config/tmux/tmux.conf
+++ b/.config/tmux/tmux.conf
@@ -1,10 +1,16 @@
 bind-key -n M-f run-shell "tmux neww ~/.scripts/tmux-sessionizer"
 
-bind -r j previous-window
-bind -r k next-window
-bind -r h switch-client -p
-bind -r l switch-client -n
+bind -n M-j previous-window
+bind -n M-k next-window
+bind -n M-h switch-client -p
+bind -n M-l switch-client -n
 
 set-option -g detach-on-destroy off
 set-option -sa terminal-overrides ",xterm*:Tc"
 set-option -g repeat-time 0
+set-option -g status-left-length 40
+set-option -g status-right-length 40
+set-option -g status-right ""
+
+set-option -g status-style bg=green,fg=black
+set-option -g window-status-style bg=green,fg=black
