Add screenshot capabilities

--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -19,6 +19,9 @@ binde =, XF86AudioPrev, exec, playerctl previous
 binde =, XF86AudioNext, exec, playerctl next
 bind =, XF86AudioMute, exec, wpctl set-mute @DEFAULT_AUDIO_SINK@ toggle 
 
+# screenshots
+bind =, Print, exec, grim -g "$(slurp -d)" - | wl-copy
+
 # See https://wiki.hyprland.org/Configuring/Keywords/ for more
 
 # Execute your favorite apps at launch
