--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -74,7 +74,7 @@ general {
 decoration {
     # See https://wiki.hyprland.org/Configuring/Variables/ for more
 
-    rounding = 5
+    rounding = 0
     
     blur {
         enabled = true
@@ -130,6 +130,24 @@ device:epic-mouse-v1 {
 # Example windowrule v2
 # windowrulev2 = float,class:^(kitty)$,title:^(kitty)$
 # See https://wiki.hyprland.org/Configuring/Window-Rules/ for more
+
+# key show rule
+windowrulev2 = float,class:(showmethekey-gtk)
+windowrulev2 = move 1400 800,class:(showmethekey-gtk)
+windowrulev2 = pin,class:(showmethekey-gtk)
+windowrulev2 = noborder,class:(showmethekey-gtk)
+windowrulev2 = nofocus,class:(showmethekey-gtk)
+windowrulev2 = rounding 0,class:(showmethekey-gtk)
+windowrulev2 = noshadow,class:(showmethekey-gtk)
+windowrulev2 = noblur,class:(showmethekey-gtk)
+
+# xwaylandvideobridge window rules
+windowrulev2 = opacity 0.0 override 0.0 override,class:^(xwaylandvideobridge)$
+windowrulev2 = noanim,class:^(xwaylandvideobridge)$
+windowrulev2 = nofocus,class:^(xwaylandvideobridge)$
+windowrulev2 = noinitialfocus,class:^(xwaylandvideobridge)$
+
+exec-once=dbus-update-activation-environment --systemd WAYLAND_DISPLAY XDG_CURRENT_DESKTOP
 
 misc {
     disable_hyprland_logo = true
