--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -131,7 +131,7 @@ device:epic-mouse-v1 {
 # windowrulev2 = float,class:^(kitty)$,title:^(kitty)$
 # See https://wiki.hyprland.org/Configuring/Window-Rules/ for more
 
-# key show rule
+# key show window rules
 windowrulev2 = float,class:(showmethekey-gtk)
 windowrulev2 = move 1400 800,class:(showmethekey-gtk)
 windowrulev2 = pin,class:(showmethekey-gtk)
@@ -146,6 +146,11 @@ windowrulev2 = opacity 0.0 override 0.0 override,class:^(xwaylandvideobridge)$
 windowrulev2 = noanim,class:^(xwaylandvideobridge)$
 windowrulev2 = nofocus,class:^(xwaylandvideobridge)$
 windowrulev2 = noinitialfocus,class:^(xwaylandvideobridge)$
+
+# app window rules
+windowrulev2 = workspace 2,class:(firefox)
+windowrulev2 = workspace 3,class:(cantata)
+windowrulev2 = workspace 4,class:(discord)
 
 exec-once=dbus-update-activation-environment --systemd WAYLAND_DISPLAY XDG_CURRENT_DESKTOP
 
