--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -5,6 +5,8 @@
 
 # See https://wiki.hyprland.org/Configuring/Monitors/
 # monitor=,preferred,auto,1
+monitor=DP-3,2560x1440@165,0x0,1
+
 monitor=HDMI-A-1,highres,auto,1
 # trigger when the switch is turning off
 bindl = , switch:off:Lid Switch,exec,hyprctl keyword monitor "eDP-1,highres,auto,1"
@@ -29,6 +31,7 @@ exec-once = env LC_TIME="cs_CZ.UTF-8" waybar
 exec-once = dunst
 exec-once = swww init
 exec-once = wpaperd
+exec-once = playerctld daemon
 
 # Source a file (multi-file configs)
 # source = ~/.config/hypr/myColors.conf
@@ -111,7 +114,7 @@ dwindle {
 
 master {
     # See https://wiki.hyprland.org/Configuring/Master-Layout/ for more
-    new_is_master = true
+    new_status = master
 }
 
 gestures {
@@ -121,9 +124,9 @@ gestures {
 
 # Example per-device config
 # See https://wiki.hyprland.org/Configuring/Keywords/#executing for more
-device:epic-mouse-v1 {
-    sensitivity = -0.5
-}
+# device:epic-mouse-v1 {
+#     sensitivity = -0.5
+# }
 
 # Example windowrule v1
 # windowrule = float, ^(kitty)$
